--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.ddiehl.android.simpleredditreader" >
+    package="com.ddiehl.android.simpleredditreader" >
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -11,17 +11,22 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".view.MainActivity"
+            android:name=".view.ListingsActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:scheme="http" android:host="www.damiendiehl.net" />
+
+                <data
+                    android:host="www.damiendiehl.net"
+                    android:scheme="http" />
             </intent-filter>
         </activity>
     </application>
