Added activity for viewing link content

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,10 @@
             android:name=".view.CommentsActivity"
             android:label="@string/app_name" >
         </activity>
+        <activity
+            android:name=".view.WebViewActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize" >
+        </activity>
     </application>
 
 </manifest>
