--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "21.1.2"
 
     defaultConfig {
-        applicationId "android.ddiehl.com.simpleredditreader"
+        applicationId "com.ddiehl.android.simplereaderforreddit"
         minSdkVersion 10
         targetSdkVersion 21
         versionCode 1
