--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.jakewharton.hugo'
 
 android {
     compileSdkVersion 21
@@ -29,6 +30,7 @@ dependencies {
     compile 'com.squareup:otto:1.3.5'
     compile 'com.google.code.gson:gson:2.3.1'
 
+    // Debugging tools
     compile 'com.facebook.stetho:stetho:1.0.0'
     compile 'com.facebook.stetho:stetho-okhttp:1.0.0'
 }
