Added RxAndroid dependency

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,5 @@ dependencies {
     // Debugging tools
 //    compile 'com.facebook.stetho:stetho:1.0.0'
 //    compile 'com.facebook.stetho:stetho-okhttp:1.0.0' // Throwing exception on POST requests
+    compile 'io.reactivex:rxandroid:0.24.0'
 }
