--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,14 +30,16 @@ android {
 
 dependencies {
     compile project(':redditdata')
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile project(':mopub-sdk')
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.android.support:support-v4:22.2.0'
     compile 'com.android.support:design:22.2.0'
     compile 'com.android.support:recyclerview-v7:22.2.0'
     compile 'com.android.support:cardview-v7:22.2.0'
-    compile 'com.google.android.gms:play-services:7.5.0' // Do we need this or can we restrict to ads?
-//    compile 'com.google.android.gms:play-services-ads:7.5.0' // AdMob
+    compile 'com.google.android.gms:play-services:7.5.0'
+    // Do we need this or can we restrict to ads?
+    //    compile 'com.google.android.gms:play-services-ads:7.5.0' // AdMob
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.squareup:otto:1.3.5'
     compile 'com.squareup.picasso:picasso:2.5.2'
