--- a/mopub-sdk/build.gradle
+++ b/mopub-sdk/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     compile 'com.android.support:support-v4:22.0.0'
     compile 'com.android.support:support-annotations:22.0.0'
     compile 'com.mopub.volley:mopub-volley:1.1.0'
+    compile 'com.android.support:recyclerview-v7:22.2.0'
 }
 
 // Don't run the Robolectric Unit Tests.
