--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,9 +3,16 @@ apply plugin: 'com.jakewharton.hugo'
 apply plugin: 'com.getkeepsafe.dexcount'
 
 android {
+    signingConfigs {
+        release {
+            keyAlias 'reddit reader'
+            keyPassword '***REMOVED***'
+            storeFile file('/Users/damien.diehl/Dropbox/Dev/Android/keystore/android.jks')
+            storePassword '***REMOVED***'
+        }
+    }
     compileSdkVersion 22
     buildToolsVersion "22.0.1"
-
     defaultConfig {
         applicationId "com.ddiehl.android.htn"
         minSdkVersion 10
@@ -13,7 +20,6 @@ android {
         versionCode 1
         versionName "0.1"
     }
-
     buildTypes {
         debug {
             applicationIdSuffix ".debug"
@@ -23,9 +29,10 @@ android {
         }
 
         release {
-            debuggable false
-            minifyEnabled false
+            debuggable true
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
             buildConfigField "String", "FLURRY_API_KEY", "\"***REMOVED***\""
             buildConfigField "String", "MOPUB_LISTING_AD_ID", "\"***REMOVED***\""
         }
