--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,8 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+ANDROID_KEYSTORE_PATH=
+ANDROID_KEYSTORE_PWD=
+HTN_KEYSTORE_ALIAS=
+HTN_KEYSTORE_PWD=
