--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,7 @@
+/*
+ * Copyright (c) 2015 Damien Diehl. All rights reserved.
+ */
+
 apply plugin: 'com.android.application'
 apply plugin: 'com.jakewharton.hugo'
 apply plugin: 'com.getkeepsafe.dexcount'
@@ -15,7 +19,7 @@ android {
     buildToolsVersion "22.0.1"
     defaultConfig {
         applicationId "com.ddiehl.android.htn"
-        minSdkVersion 10
+        minSdkVersion 15
         targetSdkVersion 22
         versionCode 2
         versionName "0.1.1"
