--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright (c) 2015 Damien Diehl. All rights reserved.
+  -->
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ddiehl.android.htn" >
 
@@ -37,7 +41,6 @@
                     android:scheme="http" />
             </intent-filter>
         </activity>
-        <activity android:name="com.ddiehl.android.htn.view.activities.SettingsActivity" />
     </application>
 
 </manifest>
