--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,8 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:22.2.0'
     compile 'com.android.support:cardview-v7:22.2.0'
     compile 'com.google.android.gms:play-services-ads:7.5.0'
+    compile 'com.squareup.okhttp:okhttp:2.4.0'
+    compile 'com.squareup.okhttp:okhttp-urlconnection:2.4.0'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.squareup:otto:1.3.5'
     compile 'com.squareup.picasso:picasso:2.5.2'
