--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,16 +5,9 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.jakewharton.hugo'
 apply plugin: 'com.getkeepsafe.dexcount'
+apply plugin: 'me.tatarka.retrolambda'
 
 android {
-    signingConfigs {
-        release {
-            storeFile file(ANDROID_KEYSTORE_PATH)
-            storePassword ANDROID_KEYSTORE_PWD
-            keyAlias HTN_KEYSTORE_ALIAS
-            keyPassword HTN_KEYSTORE_PWD
-        }
-    }
     compileSdkVersion 22
     buildToolsVersion "23 rc3"
     defaultConfig {
@@ -25,6 +18,14 @@ android {
         versionName "0.3.0-dev"
         ndk {
             moduleName "app"
+        }
+    }
+    signingConfigs {
+        release {
+            storeFile file(ANDROID_KEYSTORE_PATH)
+            storePassword ANDROID_KEYSTORE_PWD
+            keyAlias HTN_KEYSTORE_ALIAS
+            keyPassword HTN_KEYSTORE_PWD
         }
     }
     buildTypes {
@@ -40,6 +41,20 @@ android {
             signingConfig signingConfigs.release
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+}
+
+def getLocalProperty(s) {
+    Properties properties = new Properties()
+    properties.load(project.rootProject.file('local.properties').newDataInputStream())
+    return properties.getProperty(s)
+}
+
+retrolambda {
+    jdk getLocalProperty("jdk8.dir")
 }
 
 dependencies {
@@ -58,6 +73,7 @@ dependencies {
     compile 'com.squareup:otto:1.3.5'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.jakewharton:butterknife:7.0.0'
+    compile 'io.reactivex:rxandroid:0.25.0'
 
     compile 'com.facebook.stetho:stetho:1.1.1'
     compile 'com.facebook.stetho:stetho-okhttp:1.1.1'
