--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,7 @@ android {
         minSdkVersion 15
         targetSdkVersion 22
         versionCode 4
-        versionName "0.3.0-dev"
+        versionName "0.3.0"
         ndk {
             moduleName "app"
         }
