--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,5 @@
-include ':app', ':reddit', ':mopub', ':flurry'
+/*
+ * Copyright (c) 2015 Damien Diehl. All rights reserved.
+ */
+
+include ':app', ':reddit', ':mopub', ':flurry', ':InMobi-4.5.5'
