--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,8 @@
-#Wed Apr 10 15:27:10 PDT 2013
+#
+# Copyright (c) 2015 Damien Diehl. All rights reserved.
+#
+
+#Wed Aug 26 09:50:11 PDT 2015
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
