--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,4 @@
  * Copyright (c) 2015 Damien Diehl. All rights reserved.
  */
 
-include ':app', ':reddit', ':mopub', ':flurry', ':InMobi-4.5.5'
+include ':app', ':reddit'
