--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,12 +8,12 @@ apply plugin: 'com.getkeepsafe.dexcount'
 apply plugin: 'me.tatarka.retrolambda'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "23 rc3"
+    compileSdkVersion 23
+    buildToolsVersion "23"
     defaultConfig {
         applicationId "com.ddiehl.android.htn"
         minSdkVersion 15
-        targetSdkVersion 22
+        targetSdkVersion 23
         versionCode 5
         versionName '0.4.0'
         ndk {
@@ -65,12 +65,12 @@ dependencies {
     // Main dependencies
     compile fileTree(include: '*.jar', dir: 'libs')
     compile project(':reddit')
-    compile 'com.android.support:appcompat-v7:22.2.1'
-    compile 'com.android.support:support-v4:22.2.1'
-    compile 'com.android.support:design:22.2.0'
-    compile 'com.android.support:recyclerview-v7:22.2.1'
-    compile 'com.android.support:cardview-v7:22.2.1'
-    compile 'com.google.android.gms:play-services-ads:7.5.0'
+    compile 'com.android.support:appcompat-v7:23.0.0'
+    compile 'com.android.support:support-v4:23.0.0'
+    compile 'com.android.support:design:23.0.0'
+    compile 'com.android.support:recyclerview-v7:23.0.0'
+    compile 'com.android.support:cardview-v7:23.0.0'
+//    compile 'com.google.android.gms:play-services-ads:7.5.0'
     compile 'com.squareup.okhttp:okhttp:2.4.0'
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.4.0'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
