--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,12 +10,13 @@ apply plugin: 'me.tatarka.retrolambda'
 android {
     compileSdkVersion 23
     buildToolsVersion "23"
+    useLibrary 'org.apache.http.legacy'
     defaultConfig {
         applicationId "com.ddiehl.android.htn"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 5
-        versionName '0.4.0'
+        versionName '0.3.1'
         ndk {
             moduleName "app"
         }
