--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,28 +10,13 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
-    <!-- InMobi permissions -->
-    <!--<uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />-->
-    <!--<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />-->
-    <!--<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />-->
-    <!--<uses-permission android:name="android.permission.CALL_PHONE" />-->
-    <!--<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />-->
-    <!--<uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />-->
-    <!--<uses-permission android:name="android.permission.VIBRATE" />-->
-    <!--<uses-permission android:name="android.permission.RECORD_AUDIO" />-->
-    <!--<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />-->
-    <!--<uses-permission android:name="android.permission.READ_LOGS" />-->
-    <!--<uses-permission android:name="android.permission.READ_CALENDAR"/>-->
-    <!--<uses-permission android:name="android.permission.WRITE_CALENDAR"/>-->
-
     <application
         android:name=".HoldTheNarwhal"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
-        android:supportsRtl="true"
-        android:hardwareAccelerated="true"> <!-- Hardware acceleration for InMobi -->
+        android:supportsRtl="true">
 
         <!--<meta-data android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />-->
@@ -45,33 +30,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-
-                <data
-                    android:host="www.damiendiehl.net"
-                    android:scheme="http" />
-            </intent-filter>
         </activity>
-
-        <!--<activity android:name="com.inmobi.androidsdk.IMBrowserActivity"
-                  android:configChanges="keyboardHidden|orientation|keyboard|smallestScreenSize|screenSize"
-                  android:theme="@android:style/Theme.Translucent.NoTitleBar"
-                  android:hardwareAccelerated="true" />-->
-        <!--<receiver
-            android:name="com.inmobi.commons.analytics.androidsdk.IMAdTrackerReceiver"
-            android:enabled="true"
-            android:exported="true" >
-            <intent-filter>
-                <action android:name="com.android.vending.INSTALL_REFERRER" />
-                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
-                <action android:name="com.inmobi.share.id" />
-            </intent-filter>
-        </receiver>-->
-        <!--<service android:enabled="true" android:name="com.inmobi.commons.internal.ActivityRecognitionManager" />-->
 
     </application>
 
