--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,6 +85,7 @@ dependencies {
     compile 'com.facebook.stetho:stetho-okhttp:1.1.1'
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
+    compile 'com.orhanobut:logger:1.11'
     // Testing dependencies
     testCompile 'org.robolectric:robolectric:3.0'
 }
