--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,7 @@ ANDROID_KEYSTORE_PATH=
 ANDROID_KEYSTORE_PWD=
 HTN_KEYSTORE_ALIAS=
 HTN_KEYSTORE_PWD=
+REDDIT_APP_ID=
+FLURRY_API_KEY_DEBUG=
+FLURRY_API_KEY_PROD=
+android.useDeprecatedNdk=true
