--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,6 +84,7 @@ dependencies {
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
     compile 'com.orhanobut:logger:1.11'
+    compile 'com.jakewharton.timber:timber:4.1.0'
     // Testing dependencies
     testCompile 'org.robolectric:robolectric:3.0'
 }
