--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.1'
+        classpath 'com.android.tools.build:gradle:1.5.0'
         classpath 'com.jakewharton.hugo:hugo-plugin:1.2.1'
         classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.1.1'
 
@@ -21,5 +21,6 @@ plugins {
 allprojects {
     repositories {
         jcenter()
+//        maven { url "https://jitpack.io" }
     }
 }
