--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:1.5.0'
         classpath 'com.jakewharton.hugo:hugo-plugin:1.2.1'
         classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.1.1'
+        classpath 'com.github.ben-manes:gradle-versions-plugin:0.11.3'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
