--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,7 +70,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.0.0'
     compile 'com.android.support:cardview-v7:23.0.0'
 //    compile 'com.google.android.gms:play-services-ads:7.5.0'
-//    compile 'com.google.android.gms:play-services-analytics:7.8.0' // Required for Flurry?
+    compile 'com.google.android.gms:play-services-analytics:8.3.0' // Required for Flurry?
 //    compile 'com.squareup.okhttp:okhttp:2.4.0'
 //    compile 'com.squareup.okhttp:okhttp-urlconnection:2.4.0'
     compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
