--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,7 @@ dependencies {
   compile fileTree(include: '*.jar', dir: 'libs')
   compile project(':reddit')
   compile project(':bypass')
+  compile project(':dlogger')
   // 23.1.1 breaks header view functionality in NavigationView
   compile 'com.android.support:appcompat-v7:23.0.0'
   compile 'com.android.support:support-v4:23.0.0'
@@ -81,8 +82,6 @@ dependencies {
   compile 'com.facebook.stetho:stetho-okhttp:1.2.0'
   debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
   releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
-  compile 'com.orhanobut:logger:1.11'
-  compile 'com.jakewharton.timber:timber:4.1.0'
   // Testing dependencies
   testCompile 'org.robolectric:robolectric:3.0'
 }
