Fixed manifest options for deep linking

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,16 +28,18 @@
         <category android:name="android.intent.category.BROWSABLE" />
         <data android:scheme="http" />
         <data android:scheme="https" />
-        <data android:host="*.reddit.com" android:path="" />
-        <data android:host="*.reddit.com" android:pathPattern="/" />
-        <data android:host="*.reddit.com" android:pathPattern="/hot" />
-        <data android:host="*.reddit.com" android:pathPattern="/new" />
-        <data android:host="*.reddit.com" android:pathPattern="/rising" />
-        <data android:host="*.reddit.com" android:pathPattern="/controversial" />
-        <data android:host="*.reddit.com" android:pathPattern="/top" />
-        <data android:host="*.reddit.com" android:pathPattern="/r/.*" />
-        <data android:host="*.reddit.com" android:pathPattern="/u/.*" />
-        <data android:host="*.reddit.com" android:pathPattern="/user/.*" />
+        <data android:host="reddit.com" />
+        <data android:host="*.reddit.com" />
+        <data android:pathPattern="" />
+        <data android:pathPattern="/" />
+        <data android:pathPattern="/hot" />
+        <data android:pathPattern="/new" />
+        <data android:pathPattern="/rising" />
+        <data android:pathPattern="/controversial" />
+        <data android:pathPattern="/top" />
+        <data android:pathPattern="/r/.*" />
+        <data android:pathPattern="/u/.*" />
+        <data android:pathPattern="/user/.*" />
       </intent-filter>
     </activity>
 
