--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,17 +69,16 @@ dependencies {
   compile 'com.android.support:design:23.0.0'
   compile 'com.android.support:recyclerview-v7:23.0.0'
   compile 'com.android.support:cardview-v7:23.0.0'
-  compile 'com.google.android.gms:play-services-analytics:8.3.0' // Required for Flurry?
-  compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
-  compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
-  compile 'com.squareup.retrofit:adapter-rxjava:2.0.0-beta2'
+  compile 'com.google.android.gms:play-services-analytics:8.3.0' // Required for Flurry
+  compile 'com.squareup.retrofit2:retrofit:2.0.0-beta3'
+  compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta3'
+  compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0-beta3'
   compile 'com.squareup.picasso:picasso:2.5.2'
   compile 'com.jakewharton:butterknife:7.0.1'
   compile 'io.reactivex:rxjava:1.1.0'
   compile 'io.reactivex:rxandroid:1.1.0'
   // Debugging dependencies
   compile 'com.facebook.stetho:stetho:1.2.0'
-  compile 'com.facebook.stetho:stetho-okhttp:1.2.0'
   debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
   releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
   // Testing dependencies
