--- a/build.gradle
+++ b/build.gradle
@@ -1,28 +1,29 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    repositories {
-        jcenter()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:1.5.0'
-        classpath 'com.jakewharton.hugo:hugo-plugin:1.2.1'
-        classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.1.1'
-        classpath 'com.github.ben-manes:gradle-versions-plugin:0.11.3'
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-    }
+  repositories {
+    jcenter()
+  }
+  dependencies {
+    classpath 'com.android.tools.build:gradle:2.0.0-beta2'
+    classpath 'com.jakewharton.hugo:hugo-plugin:1.2.1'
+    classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.1.1'
+    classpath 'com.github.ben-manes:gradle-versions-plugin:0.11.3'
+    classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+  }
 }
 
 plugins {
-    id "me.tatarka.retrolambda" version "3.2.4"
+  id "me.tatarka.retrolambda" version "3.2.4"
 }
 
 allprojects {
-    repositories {
-        jcenter()
-        maven { url "https://jitpack.io" }
-    }
+  repositories {
+    jcenter()
+    maven { url "https://jitpack.io" }
+  }
+}
+
+task clean(type: Delete) {
+  delete rootProject.buildDir
 }
