Refactored to use quantity strings
Added resConfigs to build script

Fixed adding of comments with special HTML characters

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,7 @@ android {
     targetSdkVersion 23
     versionCode 8
     versionName '0.6'
+    resConfigs "en"
   }
   signingConfigs {
     release {
