Updated Retrofit to 2.0.0 stable
Stopped throwing away perfectly good refresh tokens

Logging optimization

Fixed missing reply option in link comments view

Added ColorSwapTextView which caches its original color to be accessed later
Replaced functionality to set link/comment author backgrounds with ColorSwapTextView

Refactoring AccessTokenManager

Replaced gilded icon

Fixed overdraw for image thumbnails in listings view

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,7 +61,7 @@ retrolambda {
 }
 
 def appCompatVersion = "23.2.0"
-def retrofitVersion = "2.0.0-beta4"
+def retrofitVersion = "2.0.0"
 
 dependencies {
   compile fileTree(include: '*.jar', dir: 'libs')
