--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,8 @@
       </intent-filter>
     </activity>
     <activity
+        android:name=".view.activities.LinkCommentsActivity"/>
+    <activity
         android:name=".view.activities.UserProfileActivity">
       <intent-filter>
         <action android:name="android.intent.action.VIEW" />
