--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'com.neenbedankt.android-apt'
 
 android {
   compileSdkVersion 23
-  buildToolsVersion "23.0.2"
+  buildToolsVersion "23.0.3"
   useLibrary 'org.apache.http.legacy'
   defaultConfig {
     applicationId "com.ddiehl.android.htn"
@@ -74,15 +74,15 @@ dependencies {
   compile "com.google.android.gms:play-services-analytics:9.0.2" // Required for Flurry
   compile "com.squareup.picasso:picasso:2.5.2"
   compile "com.jakewharton:butterknife:7.0.1"
-  def rxreddit_version = "0.7"
+  def rxreddit_version = "6ab5d47849983fbdf1baaf8cb7e79ad658e1f3a9"
   compile "com.github.damien5314.RxReddit:library:$rxreddit_version"
   compile "com.github.damien5314.RxReddit:android:$rxreddit_version"
   debugCompile "com.github.damien5314.RxReddit:mock:$rxreddit_version"
   compile "io.reactivex:rxandroid:1.1.0"
   compile "io.reactivex:rxjava:1.1.0"
   compile "com.github.damien5314:TimeSinceTextView:1.2.3"
-  compile "org.parceler:parceler-api:1.0.4"
-  apt "org.parceler:parceler:1.0.4"
+  compile "org.parceler:parceler-api:1.1.5"
+  apt "org.parceler:parceler:1.1.5"
   compile 'com.jakewharton.timber:timber:4.1.0'
   compile 'com.google.dagger:dagger:2.2'
   apt 'com.google.dagger:dagger-compiler:2.2'
