--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,6 @@
 
     <activity
       android:name=".view.activities.SubredditActivity"
-      android:label="@string/app_name"
       android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
@@ -60,6 +59,8 @@
     </activity>
     <activity
         android:name=".view.activities.PrivateMessageActivity"/>
+    <activity
+        android:name=".view.activities.SettingsActivity"/>
 
     <activity android:name="rxreddit.android.SignInActivity" />
 
