Added exit confirmation dialog
Fixed refresh in link comments view

Fixed the loading of more comments and setting depth correctly

Fixed version name

Fixed reloading of link comments view, again

Fixed proguard

Fixed AboutAppFragment

Added gradle method for getting build time

Fixing crash from WebViewActivity

Updating dependencies

Fixing lint errors

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,6 +61,10 @@
         android:name=".view.activities.PrivateMessageActivity"/>
     <activity
         android:name=".view.activities.SettingsActivity"/>
+    <activity
+        android:name=".view.activities.AboutAppActivity"/>
+    <activity
+        android:name=".view.activities.WebViewActivity"/>
 
     <activity android:name="rxreddit.android.SignInActivity" />
 
