--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,8 +14,11 @@ android {
     minSdkVersion 15
     targetSdkVersion 24
     versionCode 8
-    versionName '0.6'
+    versionName '0.5.1'
     resConfigs "en"
+    buildConfigField "long", "BUILD_TIME_UTC", "" + getTime()
+    buildConfigField "String", "REDDIT_APP_ID", "\"" + REDDIT_APP_ID + "\""
+    buildConfigField "String", "REDDIT_REDIRECT_URI", "\"" + REDDIT_REDIRECT_URI + "\""
   }
   signingConfigs {
     release {
@@ -27,11 +30,10 @@ android {
   }
   buildTypes {
     debug {
+      debuggable true
       minifyEnabled false
       applicationIdSuffix ".debug"
       versionNameSuffix '-dev'
-      buildConfigField "String", "REDDIT_APP_ID", "\"" + REDDIT_APP_ID + "\""
-      buildConfigField "String", "REDDIT_REDIRECT_URI", "\"" + REDDIT_REDIRECT_URI + "\""
       buildConfigField "String", "FLURRY_API_KEY", "\"" + FLURRY_API_KEY_DEBUG + "\""
     }
     release {
@@ -39,8 +41,6 @@ android {
       minifyEnabled true
       proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
       signingConfig signingConfigs.release
-      buildConfigField "String", "REDDIT_APP_ID", "\"" + REDDIT_APP_ID + "\""
-      buildConfigField "String", "REDDIT_REDIRECT_URI", "\"" + REDDIT_REDIRECT_URI + "\""
       buildConfigField "String", "FLURRY_API_KEY", "\"" + FLURRY_API_KEY_PROD + "\""
     }
   }
@@ -48,6 +48,10 @@ android {
     sourceCompatibility JavaVersion.VERSION_1_8
     targetCompatibility JavaVersion.VERSION_1_8
   }
+}
+
+def getTime() {
+  return (Calendar.getInstance().timeInMillis / 1000).longValue()
 }
 
 def getLocalProperty(String s) {
@@ -71,21 +75,20 @@ dependencies {
   compile "com.android.support:design:$appcompat_version"
   compile "com.android.support:recyclerview-v7:$appcompat_version"
   compile "com.android.support:cardview-v7:$appcompat_version"
-  compile "com.google.android.gms:play-services-analytics:9.0.2" // Required for Flurry
+  compile "com.google.android.gms:play-services-analytics:9.2.0" // Required for Flurry
   compile "com.squareup.picasso:picasso:2.5.2"
   compile "com.jakewharton:butterknife:7.0.1"
   def rxreddit_version = "0.8"
   compile "com.github.damien5314.RxReddit:library:$rxreddit_version"
   compile "com.github.damien5314.RxReddit:android:$rxreddit_version"
   debugCompile "com.github.damien5314.RxReddit:mock:$rxreddit_version"
-  compile "io.reactivex:rxandroid:1.1.0"
-  compile "io.reactivex:rxjava:1.1.0"
+  compile "io.reactivex:rxandroid:1.2.1"
+  compile "io.reactivex:rxjava:1.1.6"
+  compile "com.artemzin.rxjava:proguard-rules:1.1.6.0"
   compile "com.github.damien5314:TimeSinceTextView:1.2.3"
-  compile "org.parceler:parceler-api:1.1.5"
-  apt "org.parceler:parceler:1.1.5"
-  compile 'com.jakewharton.timber:timber:4.1.0'
-  compile 'com.google.dagger:dagger:2.2'
-  apt 'com.google.dagger:dagger-compiler:2.2'
+  compile "com.jakewharton.timber:timber:4.1.0"
+  compile "com.google.dagger:dagger:2.2"
+  apt "com.google.dagger:dagger-compiler:2.2"
   // Debugging dependencies
   debugCompile "com.squareup.leakcanary:leakcanary-android:1.3.1"
   releaseCompile "com.squareup.leakcanary:leakcanary-android-no-op:1.3.1"
