Fixed retaining of data on screen rotation
Retaining state in user profile and inbox views

Updated RxReddit with logging added

Fixed loading of user profile when user signs in/out

Dismiss inbox when user signs out

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,8 +39,7 @@
     </activity>
 
     <activity
-      android:name=".view.activities.SubredditActivity"
-      android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize">
+      android:name=".view.activities.SubredditActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
         <category android:name="android.intent.category.LAUNCHER" />
