Adding SubscriptionManager screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,6 +70,9 @@
     <activity
         android:name="rxreddit.android.SignInActivity" />
 
+    <activity
+        android:name=".subscriptions.SubscriptionManagerActivity" />
+
   </application>
 
 </manifest>
