Implemented an adapter for SubscriptionManagerActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,7 +71,8 @@
         android:name="rxreddit.android.SignInActivity" />
 
     <activity
-        android:name=".subscriptions.SubscriptionManagerActivity" />
+        android:name=".subscriptions.SubscriptionManagerActivity"
+        android:exported="true"/>
 
   </application>
 
