--- a/bypass/build.gradle
+++ b/bypass/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 
 android {
   compileSdkVersion 24
-  buildToolsVersion '24'
+  buildToolsVersion "$project.ext.buildToolsVersion"
 
   defaultConfig {
     minSdkVersion 15
